--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://kit.fontawesome.com/deab11b3a0.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet"/>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/normalizer.css"/>
@@ -14,31 +12,98 @@
 </head>
 <body>
     <section class="seccion_padre">
-        <div class="chat">
-            <p> 1 </p>
-            <p> 2 </p>
-            <p> 3 </p>
-            <p> 4 </p>
-            <p> 5 </p>
-            <p> 6 </p>
-            <p> 7 </p>
-            <p> 8 </p>
-            <p> 9 </p>
-        </div>            
-        <!-- <div> -->
-            <div class="manos">
-                <img class="ms-5" src="./assets/images/hand.png" alt="Manos"/>
-                <h2> Comienza el Nertworking </h2>
-        <p> Presiona el botón “Nuevo chat” para comenzar a crear nuevas 
-            redes de contacto para tu empresa o emprendimiento. </p>
+        <div class="chat flex-column">
+            <div class="maria d-flex justify-content-between">
+                <div class="d-flex ">
+                    <img class="mt-3 ms-3" src="./assets/images/maria.jpg" alt="">
+                    <div class="mariaNombre mb-0 mt-1 ms-4 d-flex flex-column">
+                        <p class="mb-0 mt-3 nombre"> Maria </p>
+                        <p class=" d-flex nombre_2 text-secondary"> Activasahora </p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fa-regular fa-message fa-1.5x ms-2 mt-4 me-2"></i>
+                    <i class="fa-solid fa-bars ms-3 fa-1.5x me-3"></i>
+                </div>
             </div>
-            
-        <!-- </div> -->
+            <span class="border border-1"></span>
+            <div class="nuevo_chat">
+                <div class="chat_1 text-white">
+                    <p class="mb-0"> Nuevo chat </p>
+                </div>
+            </div>
+            <span class="border border-1"></span>
+            <div class="moira mb-4">
+                <img class="mt-4" src="./assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div>
+                    <p class="moira_nombre ms-3 mt-3"> Moira </p>
+                    <p  class="ms-3"> Disponible </p>
+                </div>
+            </div>
+            <span class="border border-1"></span>
+            <div class="moira mb-4">
+                <img class="mt-4" src="./assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="">
+                <div>
+                    <p class="moira_nombre ms-3 mt-3"> Moira </p>
+                    <p  class="ms-3"> Disponible </p>
+                </div>
+            </div>
+            <span class="border border-1"></span>
+            <div class="moira mb-4">
+                <img class="mt-4" src="./assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="">
+                <div>
+                    <p class="moira_nombre ms-3 mt-3"> Moira </p>
+                    <p  class="ms-3"> Disponible </p>
+                </div>
+            </div>
+            <span class="border border-1"></span>
+            <div class="moira mb-4">
+                <img class="mt-4" src="./assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="">
+                <div>
+                    <p class="moira_nombre ms-3 mt-3"> Moira </p>
+                    <p  class="ms-3"> Disponible </p>
+                </div>
+            </div>
+            <span class="border border-1"></span>
+            <div class="moira mb-4">
+                <img class="mt-4" src="./assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="">
+                <div>
+                    <p class="moira_nombre ms-3 mt-3"> Moira </p>
+                    <p  class="ms-3"> Disponible </p>
+                </div>
+            </div>
+            <span class="border border-1"></span>
+            <div class="moira mb-4">
+                <img class="mt-4" src="./assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="">
+                <div>
+                    <p class="moira_nombre ms-3 mt-3"> Moira </p>
+                    <p  class="ms-3"> Disponible </p>
+                </div>
+            </div>
+            <span class="border border-1"></span>
+            <div class="moira mb-4">
+                <img class="mt-4" src="./assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="">
+                <div>
+                    <p class="moira_nombre ms-3 mt-3"> Moira </p>
+                    <p  class="ms-3"> Disponible </p>
+                </div>
+            </div>
+            <span class="border border-1"></span>
+            <div class="moira mb-4">
+                <img class="mt-4" src="./assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="">
+                <div>
+                    <p class="moira_nombre ms-3 mt-3"> Moira </p>
+                    <p  class="ms-3"> Disponible </p>
+                </div>
+            </div>
+        </div>            
+        <div class="manos d-flex justify-content-center flex-column align-items-center text-center">
+            <img class="ms-5" src="./assets/images/hand.png" alt="Manos"/>
+            <h2> Comienza el Nertworking </h2>
+            <p> Presiona el botón “Nuevo chat” para comenzar a crear nuevas 
+                redes de contacto para tu empresa o emprendimiento. 
+            </p>
+        </div>
     </section>
-    <!-- <div class="texto">
-        <h2> Comienza el Nertworking </h2>
-        <p> Presiona el botón “Nuevo chat” para comenzar a crear nuevas 
-            redes de contacto para tu empresa o emprendimiento. </p>
-    </div> -->
 </body>
 </html>
