--- a/index.html
+++ b/index.html
@@ -14,95 +14,97 @@
 </head>
 <body>
     <section class="seccion_padre d-flex">
-        <div class="chat d-flex flex-column">
-            <div class="maria d-flex justify-content-between">
-                <div class="d-flex ">
-                    <img class="mt-3 ms-3" src="./assets/images/maria.jpg" alt="">
-                    <div class="mariaNombre mb-0 ms-4 d-flex flex-column">
-                        <p class="mb-0 mt-3 nombre"> Maria </p>
-                        <p class=" d-flex nombre_2 text-secondary"> Activasahora </p>
+        <span class="border">
+            <div class="chat d-flex flex-column">
+                <div class="d-flex me-0">
+                    <div class="d-flex flex-row">
+                        <img class="maria ms-4 mt-2" src="./assets/images/maria.jpg" alt="María">
+                        <div class="d-flex flex-column ms-3">
+                            <p class="mb-0 mt-2"> María </p>
+                            <p> Activa ahora </p>
+                        </div>
+                    </div>
+                    <div class="mt-2 ">
+                         <i class="fa-regular fa-message fa-xl ms-5 mt-4"></i>
+                        <i class="fa-solid fa-bars fa-xl ms-3 mt-3 "></i>
                     </div>
                 </div>
-                <div class="d-flex mt-4">
-                    <i class="fa-regular fa-message fa-xl ms-5 mt-3"></i>
-                    <i class="fa-solid fa-bars fa-xl ms-3 mt-3"></i>
+                <span class="border border-1"></span>
+                <div class="nuevo_chat d-flex justify-content-center align-items-center" >
+                    <div class="chat_1 d-flex justify-content-center align-items-center text-white">
+                        <p class="mb-0"> Nuevo chat </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="nuevo_chat d-flex justify-content-center align-items-center">
-                <div class="chat_1 d-flex justify-content-center align-items-center text-white">
-                    <p class="mb-0"> Nuevo chat </p>
+                <span class="border border-1"></span>
+                <div class="moira d-flex ms-2">
+                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                    <div class="mt-3 ms-2">
+                        <p class="mb-0"> Moira </p>
+                        <p> Disponible ahora </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="moira d-flex mt-0 mb-2">
-                <img class="mt-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div>
-                    <p class=" ms-3 mt-3 mb-0"> Moira </p>
-                    <p  class="ms-3 dispobible"> Disponible </p>
+                <span class="border border-1"></span>
+                <div class="moira d-flex ms-2">
+                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="">
+                    <div class="mt-3 ms-2">
+                        <p class="mb-0"> Moira </p>
+                        <p> Disponible ahora </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="moira d-flex mt-0 mb-2">
-                <img class="mt-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="">
-                <div>
-                    <p class=" ms-3 mt-3 mb-0"> Andrea </p>
-                    <p  class="ms-3 dispobible"> Disponible </p>
+                <span class="border border-1"></span>
+                <div class="moira d-flex ms-2">
+                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="">
+                    <div class="mt-3 ms-2">
+                        <p class="mb-0"> Moira </p>
+                        <p> Disponible ahora </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="moira d-flex mt-0 mb-2">
-                <img class="mt-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="">
-                <div>
-                    <p class=" ms-3 mt-3 mb-0"> Benito </p>
-                    <p  class="ms-3 dispobible"> Disponible </p>
+                <span class="border border-1"></span>
+                <div class="moira d-flex ms-2">
+                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="">
+                    <div class="mt-3 ms-2">
+                        <p class="mb-0"> Moira </p>
+                        <p> Disponible ahora </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="moira d-flex">
-                <img class="mt-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="">
-                <div>
-                    <p class=" ms-3 mt-3 mb-0"> Pedro </p>
-                    <p  class="ms-3 dispobible"> Disponible </p>
+                <span class="border border-1"></span>
+                <div class="moira d-flex ms-2">
+                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="">
+                    <div class="mt-3 ms-2">
+                        <p class="mb-0"> Moira </p>
+                        <p> Disponible ahora </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="moira d-flex">
-                <img class="mt-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="">
-                <div>
-                    <p class=" ms-3 mt-3 mb-0"> José </p>
-                    <p  class="ms-3 dispobible"> Disponible </p>
+                <span class="border border-1"></span>
+                <div class="moira d-flex ms-2">
+                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="">
+                    <div class="mt-3 ms-2">
+                        <p class="mb-0"> Moira </p>
+                        <p> Disponible ahora </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="moira d-flex">
-                <img class="mt-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="">
-                <div>
-                    <p class=" ms-3 mt-3 mb-0"> Alberto </p>
-                    <p  class="ms-3 dispobible"> Disponible </p>
+                <span class="border border-1"></span>
+                <div class="moira d-flex ms-2">
+                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="">
+                    <div class="mt-3 ms-2">
+                        <p class="mb-0"> Moira </p>
+                        <p> Disponible ahora </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="moira d-flex">
-                <img class="mt-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="">
-                <div>
-                    <p class=" ms-3 mt-3 mb-0"> Roberto </p>
-                    <p  class="ms-3 dispobible"> Disponible </p>
+                <span class="border border-1"></span>
+                <div class="moira d-flex ms-2">
+                    <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="">
+                    <div class="mt-3 ms-2">
+                        <p class="mb-0"> Moira </p>
+                        <p> Disponible ahora </p>
+                    </div>
                 </div>
-            </div>
-            <span class="border border-1"></span>
-            <div class="moira d-flex">
-                <img class="mt-3 ms-3" src="./assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="">
-                <div>
-                    <p class=" ms-3 mt-3 mb-0"> María </p>
-                    <p  class="ms-3 dispobible"> Disponible </p>
-                </div>
-            </div>
-            <span class="border border-1"></span>
-        </div>            
-        <div class="manos d-flex justify-content-center flex-column align-items-center text-center">
+                <span class="border border-1"></span>
+            </div> 
+        </span>           
+        <div class="manos d-flex justify-content-center align-items-center flex-column text-center">
             <img class="ms-5" src="./assets/images/hand.png" alt="Manos"/>
-            <p class="manos_te fs-1 fw-bolder"> Comienza el Nertworking </p>
+            <p class="ms-5 mb-0 mt-4 titulo text-center "> Comienza el Nertworking </p>
             <p> Presiona el botón “Nuevo chat” para comenzar a crear nuevas 
                 redes de contacto para tu empresa o emprendimiento. 
             </p>
