--- a/index.html
+++ b/index.html
@@ -17,85 +17,85 @@
         <span class="border">
             <div class="chat d-flex flex-column">
                 <div class="d-flex me-0">
-                    <div class="d-flex flex-row">
+                    <!-- <div class="d-flex flex-row"> -->
                         <img class="maria ms-4 mt-2" src="./assets/images/maria.jpg" alt="María">
                         <div class="d-flex flex-column ms-3">
-                            <p class="mb-0 mt-2"> María </p>
-                            <p> Activa ahora </p>
+                            <p class="mb-0 mt-2 fs-5"> María </p>
+                            <p class="dispobible"> Activa ahora </p>
                         </div>
-                    </div>
-                    <div class="mt-2 ">
-                         <i class="fa-regular fa-message fa-xl ms-5 mt-4"></i>
-                        <i class="fa-solid fa-bars fa-xl ms-3 mt-3 "></i>
-                    </div>
+                    <!-- </div> -->
+                    <!-- <div class="mt-2 "> -->
+                         <i class="fa-regular fa-message fa-xl ms-5 mt-4 ps-5 pt-2 iconos"></i>
+                        <i class="fa-solid fa-bars fa-xl ms-3 mt-4 pt-2"></i>
+                    <!-- </div> -->
                 </div>
                 <span class="border border-1"></span>
-                <div class="nuevo_chat d-flex justify-content-center align-items-center" >
+                <div class="nuevo_chat d-flex justify-content-center align-items-center">
                     <div class="chat_1 d-flex justify-content-center align-items-center text-white">
                         <p class="mb-0"> Nuevo chat </p>
                     </div>
                 </div>
                 <span class="border border-1"></span>
-                <div class="moira d-flex ms-2">
+                <div class="moira d-flex ms-3">
                     <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                    <div class="mt-3 ms-2">
+                    <div class="mt-3 ms-4">
                         <p class="mb-0"> Moira </p>
-                        <p> Disponible ahora </p>
+                        <p class="disponible"> At vero eos et accusa </p>
                     </div>
                 </div>
                 <span class="border border-1"></span>
-                <div class="moira d-flex ms-2">
+                <div class="moira d-flex ms-3">
                     <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg" alt="">
-                    <div class="mt-3 ms-2">
-                        <p class="mb-0"> Moira </p>
-                        <p> Disponible ahora </p>
+                    <div class="mt-3 ms-4">
+                        <p class="mb-0"> Andrea </p>
+                        <p class="disponible"> Disponible ahora </p>
                     </div>
                 </div>
                 <span class="border border-1"></span>
-                <div class="moira d-flex ms-2">
+                <div class="moira d-flex ms-3">
                     <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg" alt="">
-                    <div class="mt-3 ms-2">
-                        <p class="mb-0"> Moira </p>
+                    <div class="mt-3 ms-4">
+                        <p class="mb-0"> Marcio </p>
                         <p> Disponible ahora </p>
                     </div>
                 </div>
                 <span class="border border-1"></span>
-                <div class="moira d-flex ms-2">
+                <div class="moira d-flex ms-3">
                     <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg" alt="">
-                    <div class="mt-3 ms-2">
-                        <p class="mb-0"> Moira </p>
+                    <div class="mt-3 ms-4">
+                        <p class="mb-0"> José </p>
                         <p> Disponible ahora </p>
                     </div>
                 </div>
                 <span class="border border-1"></span>
-                <div class="moira d-flex ms-2">
+                <div class="moira d-flex ms-3">
                     <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg" alt="">
-                    <div class="mt-3 ms-2">
-                        <p class="mb-0"> Moira </p>
+                    <div class="mt-3 ms-4">
+                        <p class="mb-0"> Alejandro </p>
                         <p> Disponible ahora </p>
                     </div>
                 </div>
                 <span class="border border-1"></span>
-                <div class="moira d-flex ms-2">
+                <div class="moira d-flex ms-3">
                     <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg" alt="">
-                    <div class="mt-3 ms-2">
-                        <p class="mb-0"> Moira </p>
+                    <div class="mt-3 ms-4">
+                        <p class="mb-0"> Pedro </p>
                         <p> Disponible ahora </p>
                     </div>
                 </div>
                 <span class="border border-1"></span>
-                <div class="moira d-flex ms-2">
+                <div class="moira d-flex ms-3">
                     <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg" alt="">
-                    <div class="mt-3 ms-2">
-                        <p class="mb-0"> Moira </p>
+                    <div class="mt-3 ms-4">
+                        <p class="mb-0"> Marco </p>
                         <p> Disponible ahora </p>
                     </div>
                 </div>
                 <span class="border border-1"></span>
-                <div class="moira d-flex ms-2">
+                <div class="moira d-flex ms-3">
                     <img class="mt-2" src="./assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg" alt="">
-                    <div class="mt-3 ms-2">
-                        <p class="mb-0"> Moira </p>
+                    <div class="mt-3 ms-4">
+                        <p class="mb-0"> Valeria </p>
                         <p> Disponible ahora </p>
                     </div>
                 </div>
@@ -105,9 +105,13 @@
         <div class="manos d-flex justify-content-center align-items-center flex-column text-center">
             <img class="ms-5" src="./assets/images/hand.png" alt="Manos"/>
             <p class="ms-5 mb-0 mt-4 titulo text-center "> Comienza el Nertworking </p>
-            <p> Presiona el botón “Nuevo chat” para comenzar a crear nuevas 
-                redes de contacto para tu empresa o emprendimiento. 
-            </p>
+            <div class="d-flex">
+                <p class="texto"> Presiona el botón </p>
+                <p class="texto_2" style="font-weight: bold;">“Nuevo chat”</p>
+                <p class="texto_3">para comenzar a crear nuevas 
+                    redes de contacto para tu empresa o emprendimiento. 
+                </p>
+            </div>
         </div>
     </section>
 </body>
